# test_ex_2025

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  data_sample.py  docker-compose.yml  pyproject.toml
SQL/: 2.1.sql  2.2.sql  2.3.sql
alembic/: env.py
migrations/: alembic.ini  data_sample.py
migrations/alembic/: env.py
migrations/alembic/versions/: 5a95c410b960_init_db.py  5e762d1ed7da_init_db.py  8870429d0efa_added_constrain_to_order_items.py
src/backend/: api.py  crud.py  database.py  main.py  models.py  schemas.py
src/backend/crud/: orders_cr.py
test/: conftest.py  data_sample.py  lib.py  test_order.py
